spacing fixes

--- a/_src/_assets/styles/_page-front.scss
+++ b/_src/_assets/styles/_page-front.scss
@@ -17,8 +17,8 @@
         margin-bottom: $spacer * 2;
     }
 
-    p:last-child {
-        margin-top: $spacer * 4;
+    .row:last-child > p:last-child {
+        margin-top: $spacer * 3;
         margin-bottom: 0;
     }
 }
